--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -70,13 +70,20 @@ body {
     .room-list {
       display: flex;
       flex-direction: column;
-      margin-bottom: 24px;
 
       &__title {
+        display: inline-block;
         margin: 24px 0 12px 0;
         font-size: $allo-font-size-small;
         font-weight: $allo-font-weight-bold;
         text-transform: uppercase;
+        
+        &>div {
+          display:inline-block;
+          background: $allo-dark-gray;
+          color: $allo-dark-navy;
+          padding: 6px 12px;
+        }
       }
     }
   }
